Instagram embedded post size correction on mobile

--- a/assets/styles/pages/blog/view-blog.less
+++ b/assets/styles/pages/blog/view-blog.less
@@ -196,6 +196,13 @@
             height:auto !important;
         }
 
+        iframe.instagram-media {
+            height: 470px !important;
+            max-width: 100% !important;
+            width: 100% !important;
+            min-width: auto !important;
+        }
+
         table {
             width: 100% !important;
         }
